# eMarket

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.txt  login-schema.xml
src/: Config.h  Message.cpp  Message.h  MessageFlow.cpp  MessageFlow.h  MessageType.h  RequestHandler.cpp  RequestHandler.h  eMarketEngine.cpp  eMarketEngine.h  helper.h  main.cpp
src/SBE/: AppHeader.h  Char16str.h  Char32str.h  Char48str.h  Char64str.h  MessageHeader.h  RegistrationRequest.h  RegistrationResponse.h  message-schema.xml  request.json  response.json
src/messages/: Char64str.h  IdentityMessage.h  MessageHeader.h
